# tamayoke-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
Assets/: Bonfire.gpmesh  Cube.gpmesh  Level.gplevel  Level0.gplevel  Level2.gplevel  Master.bank  Plane.gpmesh  Player.mtl  Sphere.gpmesh  Square.gpmesh  entrypoint.json  test.json
Importer/: import_obj.py
Shaders/: Anim.frag  Anim.vert  Basic.frag  BasicMesh.frag  BasicMesh.vert  Blight.frag  Blight.vert  NightSky.frag  NightSky2.frag  NightSky2.vert  Phong.frag  Phong.vert  Shape.frag  Shape.vert  TestBox.frag  TestBox.vert  Transform.vert
demo/: CmakeLists.txt  Main.cpp
demo/UI/: AddWoodUI.h  AlreadyHaveWoodUI.h  BonfireUI.cpp  BonfireUI.h  GameOverUI.cpp  GameOverUI.h  HaveWoodUI.h  Title.cpp  Title.h
demo/Utility/: Coroutine.cpp  Coroutine.h
demo/actor/: BackDome.cpp  BackDome.h  Bonfire.cpp  Bonfire.h  BonfirePlayer.cpp  BonfirePlayer.h  Floor.cpp  Floor.h  Timer.h  Wood.cpp  Wood.h
demo/scene/: BonfireSceneBase.cpp  BonfireSceneBase.h  BonfireSceneTag.h  GameOverScene.cpp  GameOverScene.h  GameScene.cpp  GameScene.h  TitleScene.cpp  TitleScene.h
engine/: CMakeLists.txt
engine/include/: Engine.h
engine/include/core/: Math.h  Random.h
engine/include/game/: Game.h  RuntimeRequestManager.h  StateManager.h
engine/include/game/UI/: Font.h  UIScreen.h  UISystem.h
engine/include/game/audio/: AudioComponent.h  AudioSystem.h  Bank.h  Event.h  EventInstance.h  Helper.h  SoundHandler.h
engine/include/game/audio/base/: AudioComponentBase.h  AudioSystemBase.h
engine/include/game/base/: GameBase.h  GameImplBase.h  GameSystemBase.h  GameSystemVector.h  IGame.h  InputProcessor.h  RenderDataGenerator.h  Updater.h
engine/include/game/camera/: CameraComponent.h  FPSActor.h  FPSComponent.h
engine/include/game/object/: Actor.h  ActorsSystem.h  Component.h  IActor.h  IComponent.h  MoveComponent.h
engine/include/game/object/base/: ObjectBase.h  ObjectsSystemBase.h
engine/include/game/physics/: BoxComponent.h  Collision.h  CollisionComponent.h  PhysWorld.h  SphereComponent.h
engine/include/game/scene/: ActorQuery.h  Scene.h  SceneManager.h
engine/include/input/: ButtonState.h  InputState.h  InputSystem.h  KeyboardState.h  MouseState.h
engine/include/input/base/: IInputSystem.h  InputStateBase.h  InputSystemBase.h
engine/include/input/pose/: InputState.h  InputSystem.h
engine/include/renderer/: AnimMeshComponent.h  AnimSpriteComponent.h  Mesh.h  MeshComponent.h  RenderDB.h  RenderData.h  Renderer.h  Shader.h  SkydomeComponent.h  SpriteComponent.h  Texture.h  VertexArray.h
engine/include/renderer/base/: IRenderer.h  RenderDataBase.h  RendererBase.h
engine/include/renderer/pose/: ShapeRenderer.h
engine/include/runtime/: RuntimeData.h  RuntimeSystem.h
engine/include/runtime/base/: IRuntimeSystem.h  MetricsBase.h  RuntimeSystemBase.h
engine/src/: Engine.cpp
engine/src/core/: Math.cpp  Random.cpp
engine/src/game/: Game.cpp
engine/src/game/UI/: Font.cpp  UIScreen.cpp  UISystem.cpp
engine/src/game/audio/: AudioComponent.cpp  AudioSystem.cpp  Bank.cpp  Event.cpp  EventInstance.cpp  SoundHandler.cpp
engine/src/game/base/: GameBase.cpp  IGame.cpp
engine/src/game/camera/: CameraComponent.cpp  FPSActor.cpp  FPSComponent.cpp
engine/src/game/object/: Actor.cpp  ActorsSystem.cpp  Component.cpp  MoveComponent.cpp
engine/src/game/physics/: BoxComponent.cpp  Collision.cpp  PhysWorld.cpp  SphereComponent.cpp
engine/src/game/scene/: SceneManager.cpp
engine/src/input/: InputSystem.cpp  KeyboardState.cpp  MouseState.cpp
engine/src/input/pose/: InputSystem.cpp
engine/src/renderer/: AnimMeshComponent.cpp  AnimSpriteComponent.cpp  Mesh.cpp  MeshComponent.cpp  RenderDB.cpp  Renderer.cpp  Shader.cpp  SkydomeComponent.cpp  SpriteComponent.cpp  Texture.cpp  VertexArray.cpp
engine/src/renderer/pose/: ShapeRenderer.cpp
engine/src/runtime/: RuntimeSystem.cpp
engine/test/: CMakeLists.txt  TestActorsSystem.cpp
installscript/: install.ps1  install.sh
tamayoke/: ConfigDB.h  Main.cpp  TamayokeGame.cpp  TamayokeGame.h
tamayoke/actor/: Button.cpp  Button.h  Logo.cpp  Logo.h  Pose.h
tamayoke/actor/component/: ButtonAnimComp.h
tamayoke/scene/: SceneTag.h  Title.cpp  Title.h
test/audio/api/OpenAL/: HelperTest.cpp
test/demo/: CoroutineTest.cpp
toolchains/: x64-linux.cmake  x64-windows.cmake
